--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+
+body, h1, h2, h3, h4, h5, h6 {font-family: 'Honk', system-ui;}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -20,6 +23,7 @@
   .header h1 {
     color: #D81B60; /* Pink color */
     font-size: 2em;
+    font-family: 'Honk', system-ui;
   }
 
   
